ansible/roles/network/templates/network.template
{ "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "Definition of a Vpc network implementation for {{stage_access_name}} public and private segments and NAT",
  "Parameters": {
    "Stage": {
       "Type": "String",
       "Description": "The name of the stage being used to deploy our server instances"
    },
    "VpcCidr": {
       "Type": "String",
       "Description": "The CIDR block for the VPC to deploy servers into",
       "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
       "ConstraintDescription": "Must be a valid IP CIDR range of the form x.x.x.x/x"
     }
  },
  "Resources": {
    "vpcForDeployment": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": {"Ref": "VpcCidr"},
        "EnableDnsSupport" : "true",
        "EnableDnsHostnames" : "true",
        "InstanceTenancy": "default",
        "Tags": [
          { "Key": "Name",
            "Value": { "Fn::Join": [ "-", [ "{{aws_account_profile}}", { "Ref": "Stage" } ] ] } }
         ]
       }
      },
    "internetGatewayForVPC": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
         { "Key": "Name",
            "Value": { "Fn::Join": [ "-", [ "{{aws_account_profile}}", { "Ref": "Stage" }, "gateway" ] ] } },
         ]
      }
    },
    "internetGateway": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": { "Ref": "vpcForDeployment" },
        "InternetGatewayId": { "Ref": "internetGatewayForVPC" }
      }
    },
    "rtbPublicSubnets": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpcForDeployment"
        },
        "Tags": [
          { "Key": "Name",
            "Value": "{{stage_access_name}}-public" }
         ]
      }
    },
    "routePublicSubnets": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "RouteTableId": {
          "Ref": "rtbPublicSubnets"
        },
        "GatewayId": {
          "Ref": "internetGatewayForVPC"
        }
      },
      "DependsOn": "internetGateway"
    },
    "rtbPrivateSubnets": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpcForDeployment"
        },
        "Tags": [
          { "Key": "Name",
            "Value": "{{stage_access_name}}-private" }
         ]
      }
    },
    "routePrivateSubnets": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": { "Ref": "rtbPrivateSubnets" },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId" : { "Ref" : "natGatewayService" }
        }
    },
{% for zone,attributes in ngnix_lb_deployment.zones.items() %}
    "subnetPublic{{zone|upper}}": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "{{attributes.subnets.public}}",
        "AvailabilityZone": "{{attributes.name}}",
        "VpcId": { "Ref": "vpcForDeployment" },
        "Tags": [
          { "Key": "Name",
            "Value": { "Fn::Join": [ "-", [ "{{stage_access_name}}", "public", "{{zone|upper}}" ] ] } }
         ]
      }
    },
    "rtbAssociationPublicSubnet{{zone|upper}}": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
       "RouteTableId": { "Ref": "rtbPublicSubnets" },
        "SubnetId": {
          "Ref": "subnetPublic{{zone|upper}}"
        }
      }
    },
    "subnetPrivate{{zone|upper}}": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "{{attributes.subnets.private}}",
        "AvailabilityZone": "{{attributes.name}}",
        "VpcId": { "Ref": "vpcForDeployment" },
        "Tags": [
          { "Key": "Name",
            "Value": { "Fn::Join": [ "-", [ "{{stage_access_name}}", "private", "{{zone|upper}}" ] ] } }
         ]
      }
    },
    "rtbAssociationPrivateSubnet{{zone|upper}}": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": { "Ref": "rtbPrivateSubnets" },
        "SubnetId": { "Ref": "subnetPrivate{{zone|upper}}" }
      }
    },
{% endfor %}
    "natEip": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc"
      }
    },
    "natGatewayService": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": { "Fn::GetAtt" : ["natEip", "AllocationId"]},
        "SubnetId": { "Ref" : "subnetPublic{{ngnix_lb_deployment.zones|first|upper}}"}
      }
    }
},
  "Outputs": {
    "NatEIP": {
      "Description": "Elastic IP address of NAT for the VPC deployed to",
      "Value": { "Ref": "natEip" }
    },
    "AvailabilityZones": {
      "Description": "List of all zones deployed to",
      "Value": { "Fn::Join": [ ", ", [
      {% for zone,attributes in ngnix_lb_deployment.zones.items() -%}
        "{{attributes.name}}"{%- if not loop.last -%},{% endif %}
      {%- endfor %}]]}
    },
    "PublicSubnets": {
      "Description": "List of all public subnets in VPC",
      "Value": { "Fn::Join": [ ", ", [
      {% for zone in ngnix_lb_deployment.zones -%}
        { "Ref": "subnetPublic{{zone|upper}}" }{%- if not loop.last -%},{% endif %}
      {%- endfor %}]]}},
    "PrivateSubnets": {
      "Description": "List of all private subnets in VPC",
      "Value": { "Fn::Join": [ ", ", [
      {% for zone in ngnix_lb_deployment.zones -%}
        { "Ref": "subnetPrivate{{zone|upper}}" }{%- if not loop.last -%},{% endif %}
      {%- endfor %}]]}},
    "Stage": {
      "Description": "The name of this stage",
      "Value": { "Ref": "Stage" }
    },
    "VPCCidr": {
      "Description": "The CIDR of the VPC deployed to",
      "Value": { "Fn::GetAtt" : [ "vpcForDeployment" , "CidrBlock" ] }
    },
    "VPC": {
      "Description": "The VPC ID",
      "Value": {"Ref": "vpcForDeployment" }
    }
  }
}
